--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ a {
   color: inherit; }
 
 .link {
-  color: #6C63FF;
+  color: #0074e4;
   text-decoration: underline; }
   @media (min-width: 992px) {
     .link:hover {
@@ -427,8 +427,8 @@ button, .button {
   display: inline-block;
   padding: 6pt 20pt;
   line-height: 1.7;
-  border: 1px solid #6C63FF;
-  color: #6C63FF;
+  border: 1px solid #0074e4;
+  color: #0074e4;
   font-weight: 400;
   transition: 0.7s;
   white-space: nowrap;
@@ -447,8 +447,8 @@ button, .button {
       color: #463aff; } }
 
 .button__primary {
-  background-color: #6C63FF;
-  border-color: #6C63FF;
+  background-color: #0074e4;
+  border-color: #0074e4;
   color: #fff; }
   @media (min-width: 992px) {
     .button__primary:hover {
@@ -646,8 +646,8 @@ select {
 
 [type="radio"]:checked + label:after {
   border-radius: 50%;
-  border: 1px solid #6C63FF;
-  background-color: #6C63FF;
+  border: 1px solid #0074e4;
+  background-color: #0074e4;
   z-index: 0;
   transform: scale(1.02); }
 
@@ -734,7 +734,7 @@ select {
   position: fixed;
   z-index: 100;
   width: 100%;
-  background-color: #6C63FF;
+  background-color: #0074e4;
   transition: 0.7s; }
   .navbar--nofixed {
     position: relative;
@@ -1046,16 +1046,16 @@ select {
   max-width: 60ch; }
 
 .cta {
-  background: linear-gradient(to right, #6C63FF, #4641FF);
+  background: linear-gradient(to right, #0074e4, #4641FF);
   color: #fff;
   padding: 48pt 0;
   text-align: center; }
 
 .cta--reverse {
-  background: linear-gradient(to left, #6C63FF, #4641FF); }
+  background: linear-gradient(to left, #0074e4, #4641FF); }
 
 .cta--plain {
-  background: #6C63FF; }
+  background: #0074e4; }
 
 .cta--secondary {
   background: #4641FF; }
@@ -1088,7 +1088,7 @@ select {
   padding-right: 16pt;
   display: block;
   cursor: pointer;
-  color: #6C63FF;
+  color: #0074e4;
   font-size: 1.225rem;
   min-width: 33%;
   margin-bottom: 1.5rem; }
@@ -1120,8 +1120,8 @@ select {
   margin-bottom: 8pt; }
 
 .footer__link {
-  color: #6C63FF;
-  border-bottom: 1px dotted #6C63FF;
+  color: #0074e4;
+  border-bottom: 1px dotted #0074e4;
   padding-bottom: 1pt;
   transition: 0.7s; }
   @media (min-width: 992px) {
@@ -1347,11 +1347,11 @@ select {
         opacity: 0.85; }
         .vMenu a:hover {
           opacity: 1;
-          color: #6C63FF; }
+          color: #0074e4; }
         .vMenu a:after {
           display: block;
           content: '';
-          border-bottom: 1px solid #6C63FF;
+          border-bottom: 1px solid #0074e4;
           transform: scaleX(0);
           transition: transform 250ms ease-in-out; }
         .vMenu a:hover:after {
@@ -1369,17 +1369,17 @@ select {
       margin-right: 0.5em; }
 
 .vMenu--active {
-  color: #6C63FF; }
+  color: #0074e4; }
   .vMenu--active:before {
     content: "\2014";
     margin-right: 0.333em; }
   @media (min-width: 992px) {
     .vMenu--active {
       opacity: 1;
-      color: #6C63FF; }
+      color: #0074e4; }
       .vMenu--active:after {
         display: block;
         content: '';
-        border-bottom: 1px solid #6C63FF;
+        border-bottom: 1px solid #0074e4;
         transform: none;
         transition: none; } }
